removed MooseX::App

--- a/dist.ini
+++ b/dist.ini
@@ -16,13 +16,12 @@ DBI                                       = 1.623
 DBIx::Class                               = 0.08200
 DBIx::Class::Schema::Loader               = 0.07033
 Dist::Zilla                               = 4.300028
-Dist::Zilla::MintingProfile::Author::FIBO = 0
+Dist::Zilla::MintingProfile::Author::FIBO = 20130507
 File::HomeDir                             = 1.00
 List::Util                                = 1.25
 List::MoreUtils                           = 0.33
-Mojolicious                               = 3.70
+Mojolicious                               = 4.0
 Moose                                     = 2.0604
-MooseX::App                               = 1.09
 MooseX::ClassAttribute                    = 0.26
 MooseX::Types::Path::Class                = 0.06
 MooseX::Types::Structured                 = 0.28
