--- a/dist.ini
+++ b/dist.ini
@@ -24,6 +24,7 @@ Moose                                     = 2.0604
 MooseX::ClassAttribute                    = 0.26
 MooseX::Types::Path::Class                = 0.06
 MooseX::Types::Structured                 = 0.28
+MooseX::ConfigFromFile                    = 0.12
 Perl::Tidy                                = 20121207
 Perl::Critic                              = 1.118
 Perl::Critic::Bangs                       = 1.10
@@ -33,7 +34,6 @@ Test::More                                = 0.98
 Test::use::ok                             = 0.11
 Throwable::Error                          = 0.102080
 YAML                                      = 0.84
-
 
 [PkgVersion]
 
