--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-blib/
-Makefile
-Makefile.old
-MANIFEST.bak
-META.yml
-MYMETA.yml
+.*
+*~
+!.gitignore
+!.travis.yml
+blib
 pm_to_blib
-.prove
+Makefile*
+!Makefile.PL
+MANIFEST*
+!MANIFEST.SKIP
+*META.*
 *.tar.gz
